# gltf-to-divs

./: Cargo.toml  README.md  divs  model.divs  model.gltf
.github/workflows/: ci.yml
src/: lib.rs  main.rs
