[package]
name = "rendering"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"], optional = true}
gltf = { version = "1", features = ["names", "import", "utils", "allow_empty_texture"] }

[lib]
crate-type = ["lib", "cdylib"]

[features]
build-binary = ["clap"]

[[bin]]
name = "main"
path = "src/main.rs"
required-features = ["build-binary"]